--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
 
       - name: Build and push the image
         run: |
-          docker login --username LukeCali-949 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-          docker build -t ghcr.io/lukecali-949/primes-service:latest --file Dockerfile .  
-          docker push ghcr.io/lukecali-949/primes-service:latest
+          docker login --username hellobrian1 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
+          docker build -t ghcr.io/hellobrian1/primes-service:latest --file Dockerfile .  
+          docker push ghcr.io/hellobrian1/primes-service:latest
